updated cv button in style.production
centered button and text in the button

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -39,7 +39,10 @@ a:active {
 .button {
     /* overwrites the browser defaults and resets the border */
     border: none;
-    display: inline-block;
+    display: block;
+    width: 15%;
+    margin: 0 auto;
+    text-align: center;
     /* takes the outer container font */
     font-family: inherit;
     /* styles the button*/
@@ -58,7 +61,8 @@ a:active {
 button {
     /* overwrites the browser defaults and resets the border */
     border: none;
-    display: inline-block;
+    display: block;
+    margin: 0 auto;
     /* takes the outer container font */
     font-family: inherit;
     /* styles the button*/
