--- a/css/style.production.css
+++ b/css/style.production.css
@@ -154,6 +154,17 @@ button:hover, button:focus, .button:hover, .button:focus {
     margin: auto;
 }
 
+.form-contact, title-work {
+    text-align: center;
+    margin: 0 auto;
+    line-height: 1.5;
+}
+
+.contact-info {
+    text-align: center;
+    line-height: 2.0;
+}
+
 .page-footer {
     clear: both;
     display: -webkit-box;
