--- a/css/style.production.css
+++ b/css/style.production.css
@@ -165,6 +165,38 @@ button:hover, button:focus, .button:hover, .button:focus {
     line-height: 2.0;
 }
 
+.standard-label {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-transform: translateY(10px); 
+    -ms-transform: translateY(10px);
+        transform: translateY(10px);       
+}
+
+.standard-label-message {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-transform: translateY(10px); 
+    -ms-transform: translateY(10px);
+        transform: translateY(10px); 
+    padding-bottom: 10px;
+    line-height: 1.3;
+}
+
+.standard-submit {
+    margin-top: 10px;
+}
+
 .page-footer {
     clear: both;
     display: -webkit-box;
