updated profile portrait height styles.css
added a height

--- a/css/styles.css
+++ b/css/styles.css
@@ -86,6 +86,7 @@ button:hover, button:focus, .button:hover, .button:focus {
 .profile_portrait {
     float: left;
     width: 250px;
+    height: 250px;
     margin-right: 40px;
     border-radius: 50%;
 }
