--- a/css/styles.css
+++ b/css/styles.css
@@ -154,6 +154,16 @@ button:hover, button:focus, .button:hover, .button:focus {
     background-color: var(--grid-background);
 }
 
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+    padding: 8px;
+}
+
+.skills-table {
+    margin: 0 auto;
+}
+
 @keyframes color-change {
     0% {
         fill: var(--yellow-sun);
