--- a/css/styles.css
+++ b/css/styles.css
@@ -140,6 +140,35 @@ button:hover, button:focus, .button:hover, .button:focus {
     margin: auto;
 }
 
+.form-contact, title-work {
+    text-align: center;
+    margin: 0 auto;
+    line-height: 1.5;
+}
+
+.contact-info {
+    text-align: center;
+    line-height: 2.0;
+}
+
+.standard-label {
+    display: flex;
+    flex-direction: column;
+    transform: translateY(10px);       
+}
+
+.standard-label-message {
+    display: flex;
+    flex-direction: column;
+    transform: translateY(10px); 
+    padding-bottom: 10px;
+    line-height: 1.3;
+}
+
+.standard-submit {
+    margin-top: 10px;
+}
+
 .page-footer {
     clear: both;
     display: flex;
